switched to serverless

--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint",
     "export": "next build && next export",
     "build:standalone": "next build && next export",
-    "deploy": "npm run build && npm run start"
+    "deploy": "npm run build && npm run start",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:drop": "drizzle-kit drop"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@planetscale/database": "^1.14.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -55,6 +61,7 @@
     "framer-motion": "^12.23.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mysql2": "^3.9.2",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
