--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@neondatabase/serverless": "^1.0.1",
     "@planetscale/database": "^1.14.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -64,6 +65,7 @@
     "mysql2": "^3.9.2",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "pg": "^8.16.3",
     "react": "^19",
     "react-d3-tree": "^3.6.6",
     "react-day-picker": "9.0.0",
